feat: adding provisional doctor dashboard implementation